--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -10,8 +10,8 @@
 	//},
 
 	// image
-	"image": "serial115200/devcontainer_sphinx:latest",
-	//"image": "serial115200/devcontainer_sphinx_pdf:latest",
+	//"image": "serial115200/devcontainer_sphinx:latest",
+	"image": "ghcr.io/serial115200/devcontainer_sphinx:v1.0",
 
 	"customizations": {
 		"vscode": {
