--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,18 +1,15 @@
 // For format details, see https://aka.ms/devcontainer.json.
 {
 	"name": "Sphinx",
-
 	//"build": {
 	//	"dockerfile": "Dockerfile",
 	//	"args": {
 	//		"VARIANT": "3-bullseye"
 	//	}
 	//},
-
 	// image
 	//"image": "serial115200/devcontainer_sphinx:latest",
 	"image": "ghcr.io/serial115200/devcontainer_sphinx:v1.0",
-
 	"customizations": {
 		"vscode": {
 			"settings": {},
@@ -34,7 +31,9 @@
 			]
 		}
 	},
-
+	"mounts": [
+		"type=bind,source=${localEnv:HOME}/.ssh,target=/home/vscode/.ssh,readonly"
+	],
 	//Enabling SSH connections over HTTPS
 	"postCreateCommand": "cp /config /home/vscode/.ssh/"
 }
