--- a/source/env_dev/ubuntu/env_ubuntu.conf
+++ b/source/env_dev/ubuntu/env_ubuntu.conf
@@ -49,6 +49,7 @@ wget
 # 网络调试
 socat
 netcat
+tcpdump
 
 
 # 软件库
@@ -58,8 +59,7 @@ libnl-genl-3-dev
 libnl-route-3-dev
 
 
-# 虚拟化
-docker
+# 隔离与虚拟化
 fakeroot
 
 
