--- a/.github/workflows/ubuntu-package-test.yml
+++ b/.github/workflows/ubuntu-package-test.yml
@@ -1,4 +1,4 @@
-name: Ubuntu Package Test
+name: Ubuntu Development Image Build and Publish
 
 on:
   push:
@@ -11,7 +11,7 @@ on:
   workflow_dispatch:
     inputs:
       ubuntu_version:
-        description: 'Test all Ubuntu versions'
+        description: 'Build and publish Ubuntu development images'
         required: true
         default: 'all'
         type: choice
@@ -19,25 +19,50 @@ on:
           - 'all'
 
 jobs:
-  test-packages:
+  build-and-publish:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
     strategy:
       matrix:
         ubuntu-version: [20.04, 22.04, 24.04]
     steps:
       - uses: actions/checkout@v4
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
-      - name: Build and test Docker image
+
+      - name: Log in to GitHub Container Registry
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Generate Dockerfile
         run: |
-          # Generate Dockerfile using the script
           cd source/env_dev/ubuntu
           chmod +x generate_scripts.sh
           ./generate_scripts.sh
 
-          # Build and test the image
-          docker buildx build --load -f Dockerfile.ubuntu${{ matrix.ubuntu-version }} -t ubuntu-test:${{ matrix.ubuntu-version }} .
-          docker run --rm ubuntu-test:${{ matrix.ubuntu-version }} bash -c "echo 'All packages installed successfully'"
+      - name: Build and push
+        uses: docker/build-push-action@v5
+        with:
+          context: source/env_dev/ubuntu
+          file: Dockerfile.ubuntu${{ matrix.ubuntu-version }}
+          push: true
+          tags: |
+            ghcr.io/${{ github.repository_owner }}/ubuntu-dev:latest
+            ghcr.io/${{ github.repository_owner }}/ubuntu-dev:${{ matrix.ubuntu-version }}
+            ghcr.io/${{ github.repository_owner }}/ubuntu-dev:${{ matrix.ubuntu-version }}-${{ github.sha }}
+          labels: |
+            org.opencontainers.image.source=${{ github.server_url }}/${{ github.repository }}
+            org.opencontainers.image.version=${{ matrix.ubuntu-version }}
+            org.opencontainers.image.created=${{ github.event.repository.created_at }}
+            org.opencontainers.image.revision=${{ github.sha }}
 
-          # Clean up generated files
+      - name: Clean up generated files
+        run: |
+          cd source/env_dev/ubuntu
           rm Dockerfile.ubuntu* install_packages_ubuntu*.sh
