--- a/.github/workflows/ubuntu-package-test.yml
+++ b/.github/workflows/ubuntu-package-test.yml
@@ -29,6 +29,8 @@ jobs:
         ubuntu-version: [20.04, 22.04, 24.04]
         platforms: [linux/amd64]
     steps:
+      - uses: actions/checkout@v4
+
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
 
