--- a/.github/workflows/devops-devcontainer-image.yml
+++ b/.github/workflows/devops-devcontainer-image.yml
@@ -1,4 +1,4 @@
-name: Build and Push DevContainer Image
+name: DevContainer Image Build and Publish
 
 on:
   push:
@@ -35,8 +35,8 @@ jobs:
           file: .devcontainer/Dockerfile
           push: true
           tags: |
-            ghcr.io/${{ github.repository_owner }}/devcontainer_sphinx:latest
-            ghcr.io/${{ github.repository_owner }}/devcontainer_sphinx:${{ github.sha }}
+            ghcr.io/${{ github.repository_owner }}/${{ github.repository }}/devcontainer_sphinx:latest
+            ghcr.io/${{ github.repository_owner }}/${{ github.repository }}/devcontainer_sphinx:${{ github.sha }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
           labels: |
