--- a/.github/workflows/devops-docs.yml
+++ b/.github/workflows/devops-docs.yml
@@ -28,10 +28,15 @@ jobs:
         with:
           python-version: '3.13'
 
-      - name: Install dependencies
+      - name: Install system dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y graphviz imagemagick make
+
+      - name: Install Python dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          pip install -r .devcontainer/requirements.txt
 
       - name: Build with Sphinx
         run: |
