--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,21 +1,7 @@
-# syntax=docker/dockerfile:1.3-labs
+FROM sphinxdoc/sphinx:8.2.3
 
-ARG VARIANT=3-bullseye
-FROM mcr.microsoft.com/vscode/devcontainers/python:${VARIANT}
-
+WORKDIR /docs
 COPY requirements.txt /
-
-RUN <<EOF
-apt-get update
-apt-get install --no-install-recommends --yes \
-     graphviz \
-     imagemagick \
-     make \
-     git
-apt-get autoremove
-apt-get clean
-rm -rf /var/lib/apt/lists/*
-EOF
 
 RUN <<EOF
 pip install --no-cache-dir --upgrade pip
