--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,8 +1,8 @@
 FROM sphinxdoc/sphinx:8.2.3
 
-COPY requirements.txt /
+COPY requirements.txt /requirements.txt
 
 RUN <<EOF
 pip install --no-cache-dir --upgrade pip
-pip install --no-cache-dir -r requirements.txt
+pip install --no-cache-dir -r /requirements.txt
 EOF
