--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,10 +1,14 @@
-FROM sphinxdoc/sphinx:8.2.3
+FROM mcr.microsoft.com/vscode/devcontainers/python:3-bullseye
 
-COPY requirements.txt /requirements.txt
+COPY requirements.txt /
 
 RUN <<EOF
 apt-get update
-apt-get install --no-install-recommends --yes git
+apt-get install --no-install-recommends --yes   \
+        git \
+        graphviz \
+        imagemagick \
+        make
 apt-get autoremove
 apt-get clean
 rm -rf /var/lib/apt/lists/*
@@ -12,5 +16,5 @@ EOF
 
 RUN <<EOF
 pip install --no-cache-dir --upgrade pip
-pip install --no-cache-dir -r /requirements.txt
+pip install --no-cache-dir -r requirements.txt
 EOF
