--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,7 +1,7 @@
 // For format details, see https://aka.ms/devcontainer.json.
 {
 	"name": "Sphinx",
-	"image": "ghcr.io/serial115200/devcontainer_sphinx:latest",
+	"image": "ghcr.io/serial115200/serial115200/memos/devcontainer_sphinx:85ed1c805bf0952bd965741c27b66669d756a184",
 	"customizations": {
 		"vscode": {
 			"settings": {},
