--- a/.github/workflows/devops-devcontainer.yml
+++ b/.github/workflows/devops-devcontainer.yml
@@ -34,8 +34,8 @@ jobs:
           context: .devcontainer
           push: true
           tags: |
-            ghcr.io/${{ github.repository_owner }}/${{ github.repository }}/devcontainer_sphinx:latest
-            ghcr.io/${{ github.repository_owner }}/${{ github.repository }}/devcontainer_sphinx:${{ github.sha }}
+            ghcr.io/${{ github.repository }}/devcontainer_sphinx:latest
+            ghcr.io/${{ github.repository }}/devcontainer_sphinx:${{ github.sha }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
           labels: |
