--- a/.github/workflows/devops-ubuntu-dev.yml
+++ b/.github/workflows/devops-ubuntu-dev.yml
@@ -51,9 +51,9 @@ jobs:
           push: true
           platforms: ${{ matrix.platforms }}
           tags: |
-            ghcr.io/${{ github.repository_owner }}/${{ github.repository }}/ubuntu-dev:${{ matrix.ubuntu-version }}-latest
-            ghcr.io/${{ github.repository_owner }}/${{ github.repository }}/ubuntu-dev:${{ matrix.ubuntu-version }}
-            ghcr.io/${{ github.repository_owner }}/${{ github.repository }}/ubuntu-dev:${{ matrix.ubuntu-version }}-${{ github.sha }}
+            ghcr.io/${{ github.repository }}/ubuntu-dev:${{ matrix.ubuntu-version }}-latest
+            ghcr.io/${{ github.repository }}/ubuntu-dev:${{ matrix.ubuntu-version }}
+            ghcr.io/${{ github.repository }}/ubuntu-dev:${{ matrix.ubuntu-version }}-${{ github.sha }}
           labels: |
             org.opencontainers.image.source=${{ github.server_url }}/${{ github.repository }}
             org.opencontainers.image.version=${{ matrix.ubuntu-version }}
