--- a/.github/workflows/devops-devcontainer.yml
+++ b/.github/workflows/devops-devcontainer.yml
@@ -5,6 +5,7 @@ on:
     branches: [ main ]
     paths:
       - '.devcontainer/**'
+      - '.github/workflows/devops-devcontainer.yml'
   workflow_dispatch:
 
 jobs:
