--- a/.github/workflows/devops-devcontainer.yml
+++ b/.github/workflows/devops-devcontainer.yml
@@ -2,7 +2,7 @@ name: DevContainer Image Build and Publish
 
 on:
   push:
-    branches: [ main ]
+    branches: [ master ]
     paths:
       - '.devcontainer/**'
       - '.github/workflows/devops-devcontainer.yml'
