--- a/.github/workflows/devops-docs.yml
+++ b/.github/workflows/devops-docs.yml
@@ -2,13 +2,12 @@ name: Build and Deploy Documentation
 
 on:
   push:
-    branches: [ main ]
+    branches: [ master ]
   workflow_dispatch:
 
 permissions:
   contents: write
   pages: write
-  id-token: write
 
 concurrency:
   group: "pages"
