--- a/source/env/sphinx/env_sphinx_devcontainer.json
+++ b/source/env/sphinx/env_sphinx_devcontainer.json
@@ -1,7 +1,6 @@
-// For format details, see https://aka.ms/devcontainer.json.
 {
 	"name": "Sphinx",
-	"image": "ghcr.io/serial115200/memos/devcontainer_sphinx:56e769630857e002bd8a2903bb7dbf560cece09c",
+	"image": "ghcr.io/serial115200/memos/devcontainer_sphinx:latest",
 	"customizations": {
 		"vscode": {
 			"settings": {},
@@ -11,6 +10,7 @@
 				"lextudio.restructuredtext",
 				"ms-azuretools.vscode-docker",
 				"ms-ceintl.vscode-language-pack-zh-hans",
+				"ms-python.debugpy",
 				"ms-python.python",
 				"ms-python.vscode-pylance",
 				"ms-vscode.cmake-tools",
