--- a/source/env/ubuntu/env_ubuntu.conf
+++ b/source/env/ubuntu/env_ubuntu.conf
@@ -4,16 +4,20 @@ passwd
 
 
 # 编译/构建/调试
+flex
 clang
-build-essential
 ccache
+build-essential
 
 cmake
 autoconf
 automake
 
+
+# 调试
 gdb
 valgrind        # 内存
+
 
 # 打包/压缩
 cpio
