--- a/source/env/ubuntu/env_ubuntu.conf
+++ b/source/env/ubuntu/env_ubuntu.conf
@@ -24,7 +24,7 @@ cpio
 gzip            # tar -z
 bzip2           # tar -j
 xz-utils        # tar -J
-
+zstd
 
 # 远程访问
 ssh             # openssh-server/openssh-client
@@ -34,6 +34,7 @@ autossh
 
 # 版本控制
 git
+git-email
 subversion
 
 
@@ -55,7 +56,9 @@ tcpdump
 
 
 # 软件库
+libelf-dev
 libssl-dev
+libncurses5-dev
 libnl-3-dev
 libnl-genl-3-dev
 libnl-route-3-dev
@@ -72,9 +75,14 @@ shellcheck
 
 
 # 杂项
+bc
 file
+bison
 openssl
 coreutils
 bsdmainutils
+vim
 vim-common
+dwarves
+exuberant-ctags
 lsb-release
