--- a/source/DevelopmentSetup/linux/ubuntu/software/ubuntu_common.conf
+++ b/source/DevelopmentSetup/linux/ubuntu/software/ubuntu_common.conf
@@ -44,7 +44,7 @@ iproute2        # ip
 net-tools       # ifconfig...
 iw              # iw
 wireless-tools  # iwconfig...
-
+bridge-utils    # brctl
 
 # 下载工具
 curl
